[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hail-pipeline"
version = "0.1.0"
description = "Hail peril pipeline (M0/M1): the MRMS source adapter that turns raw radar tiles into per-cell-day evidence and emits the hazard-distribution boundary object."
requires-python = ">=3.12"
dependencies = ["numpy", "pandas", "xarray", "cfgrib", "requests"]

[tool.setuptools.packages.find]
where = ["src"]
